--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webpack-5-react-scripts",
-  "version": "0.4.3",
+  "name": "react-scripts-wp5",
+  "version": "5.0.0",
   "description": "Configuration and scripts for Create React App using Webpack 5.",
   "repository": {
     "type": "git",
@@ -28,39 +28,39 @@
   },
   "types": "./lib/react-app.d.ts",
   "dependencies": {
-    "@babel/core": "7.9.6",
+    "@babel/core": "7.11.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.3.1",
     "@svgr/webpack": "5.4.0",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/eslint-plugin": "4.1.0",
+    "@typescript-eslint/parser": "4.1.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "^25.2.6",
+    "babel-jest": "26.3.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
     "bfj": "^7.0.2",
     "camelcase": "^6.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "css-loader": "3.5.3",
+    "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.6.0",
+    "eslint": "7.8.1",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "4.0.2",
-    "eslint-plugin-flowtype": "4.7.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "^4.0.0",
-    "file-loader": "6.0.0",
+    "file-loader": "6.1.0",
     "fs-extra": "^9.0.0",
-    "html-webpack-plugin": "4.3.0",
+    "html-webpack-plugin": "4.4.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "25.5.4",
-    "jest-resolve": "25.5.1",
-    "jest-watch-typeahead": "0.5.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "jest": "26.4.2",
+    "jest-resolve": "26.4.0",
+    "jest-watch-typeahead": "0.6.1",
+    "mini-css-extract-plugin": "0.11.1",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
@@ -72,17 +72,17 @@
     "react-refresh": "^0.8.1",
     "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
+    "sass-loader": "10.0.2",
     "semver": "7.3.2",
     "style-loader": "1.2.1",
-    "terser-webpack-plugin": "3.0.1",
+    "terser-webpack-plugin": "4.1.0",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.0",
     "wbpk-5-cra-utils": "^1.0.1",
-    "webpack": "5.0.0-beta.16",
+    "webpack": "5.0.0-beta.29",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
     "react": "^16.12.0",
