--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -69,6 +69,7 @@
     "postcss-safe-parser": "4.0.2",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
+    "react-dev-utils-wp5": "1.0.1",
     "react-refresh": "^0.8.1",
     "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
@@ -78,7 +79,6 @@
     "terser-webpack-plugin": "4.1.0",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.0",
-    "wbpk-5-cra-utils": "^1.0.1",
     "webpack": "5.0.0-beta.29",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
