--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-scripts-wp5",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "description": "Configuration and scripts for Create React App using Webpack 5.",
   "repository": {
     "type": "git",
@@ -69,7 +69,7 @@
     "postcss-safe-parser": "4.0.2",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
-    "react-dev-utils-wp5": "1.0.1",
+    "react-scripts-utils-wp5": "1.0.1",
     "react-refresh": "^0.8.1",
     "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
