--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-scripts-wp5",
-  "version": "5.0.3",
+  "version": "5.0.4",
   "description": "Configuration and scripts for Create React App using Webpack 5.",
   "repository": {
     "type": "git",
@@ -79,7 +79,7 @@
     "terser-webpack-plugin": "4.1.0",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.0",
-    "webpack": "5.0.0-beta.29",
+    "webpack": "5.0.0-rc.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
